--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p id='kirby1'></p>
         <p id='kirby2'></p>
         <div id='content'>
-            <h2 class='txt-rotate undertitle' id='gang' data-period='2000' data-rotate='["Estudiante", "Desarrollador de backend", "Desarrollador web"]'></h2>
+            <h2 class='txt-rotate undertitle' id='gang' data-period='2000' data-rotate='["Desarrollador de Videojuegos", "Desarrollador de backend", "Desarrollador web"]'></h2>
             <h2 class='yeet'>Fullstack Developer</h2><br class='yeet'>
             <a draggable=false href='https://discord.gg/jw9Pcf' class='btn' target='_blank'>Discord</a>
             <a draggable=false href='https://github.com/GrappePie' class='btn' target='_blank'>GitHub</a>
@@ -44,7 +44,7 @@
             <br><br>
             <section class='container'>
                 <h2 class='title'>Acerca de</h2>
-                <p>Hola! Me llamo Michael (conocido como GrappePie en linea), y estoy estudiando Ingenieria en Sistemas Compotacionales. Me gusta <a href='https://github.com/GrappePie' target='_blank'>programar</a>, la <a href='https://soundcloud.com/grappe-pie' target='_blank'>musica</a>, los <a href='https://steamcommunity.com/id/grappepie/' target='_blank'>videojuegos</a> y el <a href='https://myanimelist.net/animelist/GrappePie' target='_blank'>anime</a>!</p>
+                <p>Hola! Me llamo Michael (conocido como GrappePie en linea), y estudié Ingenieria en Sistemas Compotacionales. Me gusta <a href='https://github.com/GrappePie' target='_blank'>programar</a>, la <a href='https://soundcloud.com/grappe-pie' target='_blank'>musica</a>, los <a href='https://steamcommunity.com/id/grappepie/' target='_blank'>videojuegos</a> y el <a href='https://myanimelist.net/animelist/GrappePie' target='_blank'>anime</a>!</p>
             </section>
             <br>
             <section class='container' style='display: inline-block;'>
@@ -65,7 +65,7 @@
                     </div>
                     <div style='float:right;' class='container'>
                     </div> -->
-                    <h2 class='yeet' style='color: white !important;'>This site is 10x better with Javascript on.</h2>
+                    <h2 class='yeet' style='color: white !important;'>Este sition es 10x mejor con Javascript activado.</h2>
                 </div>
             </section>
         </div>
