--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id='content'>
             <h2 class='txt-rotate undertitle' id='gang' data-period='2000' data-rotate='["Desarrollador de Videojuegos", "Desarrollador de backend", "Desarrollador web"]'></h2>
             <h2 class='yeet'>Fullstack Developer</h2><br class='yeet'>
-            <a draggable=false href='https://discord.gg/jw9Pcf' class='btn' target='_blank'>Discord</a>
+            <a draggable=false href='https://discord.gg/wHAB48PUrG' class='btn' target='_blank'>Discord</a>
             <a draggable=false href='https://github.com/GrappePie' class='btn' target='_blank'>GitHub</a>
             <a draggable=false href='https://www.patreon.com/grappepie' class='btn' target='_blank'>Patreon</a>
             <br><br>
@@ -50,10 +50,18 @@
             <section class='container' style='display: inline-block;'>
                 <h2 class='title'>Conocimientos de programacion</h2>
                 <i class='icon-nodejs icon'></i>
+                <i class='icon-mysql icon'></i>
+                <i class='icon-mongodb icon'></i>
                 <i class='icon-python icon'></i>
                 <i class='icon-html icon'></i>
                 <i class='icon-css icon'></i>
-                <!-- <i class='icon-sass icon'></i> -->
+                <i class='icon-angular-alt icon'></i>
+                <i class='icon-bootstrap icon'></i>
+                <i class='icon-jquery icon'></i>
+                <i class='icon-reactjs icon'></i>
+                <i class='icon-spring icon'></i>
+                <i class='icon-java icon'></i>
+                <i class='icon-php icon'></i>
                 <i class='icon-javascript icon'></i>
             </section>
             <br>
@@ -61,10 +69,16 @@
             <section class='container'>
                 <h2 class='title'>Projectos</h2>
                 <div class='containers'>
-                    <!-- <div style='float:left;' class='container'>
+                    <div style='float:left;' class='container'>
+                        <p class="title">KTANE-Manual</p>
+                        <p>Manual de Keep Talking and Nobody Explodes interactivo.</p>
+                        <a class="btn" href="https://grappepie.github.io/keep-talking-and-nobody-Explode-Espanol/" target="_blank">Ir a la pagina</a>
                     </div>
                     <div style='float:right;' class='container'>
-                    </div> -->
+                        <p class="title">Grappy-bot</p>
+                        <p>Bot de musica para discord.</p>
+                        <a class="btn" href="https://github.com/GrappePie/Grappy-bot" target="_blank">Ir al proyecto</a>
+                    </div>
                     <h2 class='yeet' style='color: white !important;'>Este sition es 10x mejor con Javascript activado.</h2>
                 </div>
             </section>
