--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p id='kirby1'></p>
         <p id='kirby2'></p>
         <div id='content'>
-            <h2 class='txt-rotate undertitle' id='gang' data-period='2000' data-rotate='["Desarrollador de Videojuegos", "Desarrollador de backend", "Desarrollador web"]'></h2>
+            <h2 class='txt-rotate undertitle' id='gang' data-period='2000' data-rotate='["Desarrollador de Videojuegos", "Desarrollador de backend", "Desarrollador de frontend", "Desarrollador web"]'></h2>
             <h2 class='yeet'>Fullstack Developer</h2><br class='yeet'>
             <a draggable=false href='https://discord.gg/wHAB48PUrG' class='btn' target='_blank'>Discord</a>
             <a draggable=false href='https://github.com/GrappePie' class='btn' target='_blank'>GitHub</a>
