--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <br><br>
             <section class='container'>
                 <h2 class='title'>Acerca de</h2>
-                <p>Hola! Me llamo Michael (conocido como GrappePie en linea), y estudié Ingenieria en Sistemas Compotacionales. Me gusta <a href='https://github.com/GrappePie' target='_blank'>programar</a>, la <a href='https://soundcloud.com/grappe-pie' target='_blank'>musica</a>, los <a href='https://steamcommunity.com/id/grappepie/' target='_blank'>videojuegos</a> y el <a href='https://myanimelist.net/animelist/GrappePie' target='_blank'>anime</a>!</p>
+                <p>Hola! Me llamo Michael (conocido como GrappePie en línea), y estudié ingeniería en Sistemas Computacionales. Me gusta <a href='https://github.com/GrappePie' target='_blank'>programar</a>, la <a href='https://soundcloud.com/grappe-pie' target='_blank'>música</a>, los <a href='https://steamcommunity.com/id/grappepie/' target='_blank'>videojuegos</a> y el <a href='https://myanimelist.net/animelist/GrappePie' target='_blank'>anime</a>!</p>
             </section>
             <br>
             <section class='container' style='display: inline-block;'>
-                <h2 class='title'>Conocimientos de programacion</h2>
+                <h2 class='title'>Conocimientos de programación</h2>
                 <i class='icon-nodejs icon'></i>
                 <i class='icon-mysql icon'></i>
                 <i class='icon-mongodb icon'></i>
@@ -67,7 +67,7 @@
             <br>
             <br>
             <section class='container'>
-                <h2 class='title'>Projectos</h2>
+                <h2 class='title'>Proyectos</h2>
                 <div class='containers'>
                     <div style='float:left;' class='container'>
                         <p class="title">KTANE-Manual</p>
@@ -76,7 +76,7 @@
                     </div>
                     <div style='float:right;' class='container'>
                         <p class="title">Grappy-bot</p>
-                        <p>Bot de musica para discord.</p>
+                        <p>Bot de música para Discord.</p>
                         <a class="btn" href="https://github.com/GrappePie/Grappy-bot" target="_blank">Ir al proyecto</a>
                     </div>
                     <h2 class='yeet' style='color: white !important;'>Este sition es 10x mejor con Javascript activado.</h2>
