--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         <p id='kirby1'></p>
         <p id='kirby2'></p>
         <div id='content'>
-            <h2 class='txt-rotate undertitle' id='gang' data-period='2000' data-rotate='["Desarrollador de Videojuegos", "Desarrollador de backend", "Desarrollador de frontend", "Desarrollador web"]'></h2>
+            <h2 class='txt-rotate undertitle' id='gang' data-period='2000' data-rotate="[Test]"></h2>
             <h2 class='yeet'>Fullstack Developer</h2><br class='yeet'>
             <a draggable=false href='https://discord.gg/wHAB48PUrG' class='btn' target='_blank'>Discord</a>
             <a draggable=false href='https://github.com/GrappePie' class='btn' target='_blank'>GitHub</a>
             <a draggable=false href='https://www.patreon.com/grappepie' class='btn' target='_blank'>Patreon</a>
             <br><br>
             <section class='container'>
-                <h2 class='title'>Acerca de</h2>
-                <p>Hola! Me llamo Michael (conocido como GrappePie en línea), y estudié ingeniería en Sistemas Computacionales. Me gusta <a href='https://github.com/GrappePie' target='_blank'>programar</a>, la <a href='https://soundcloud.com/grappe-pie' target='_blank'>música</a>, los <a href='https://steamcommunity.com/id/grappepie/' target='_blank'>videojuegos</a> y el <a href='https://myanimelist.net/animelist/GrappePie' target='_blank'>anime</a>!</p>
+                <h2 class='title' id='about'></h2>
+                <p id='desc'></p>
             </section>
             <br>
             <section class='container' style='display: inline-block;'>
-                <h2 class='title'>Conocimientos de programación</h2>
+                <h2 class='title' id='exp'></h2>
                 <i class='icon-nodejs icon'></i>
                 <i class='icon-mysql icon'></i>
                 <i class='icon-mongodb icon'></i>
@@ -67,19 +67,19 @@
             <br>
             <br>
             <section class='container'>
-                <h2 class='title'>Proyectos</h2>
+                <h2 class='title' id='projects'></h2>
                 <div class='containers'>
                     <div style='float:left;' class='container'>
                         <p class="title">KTANE-Manual</p>
-                        <p>Manual de Keep Talking and Nobody Explodes interactivo.</p>
-                        <a class="btn" href="https://grappepie.github.io/keep-talking-and-nobody-Explode-Espanol/" target="_blank">Ir a la pagina</a>
+                        <p id='project-desc1'></p>
+                        <a class="btn goToPage" href="https://grappepie.github.io/keep-talking-and-nobody-Explode-Espanol/" target="_blank"></a>
                     </div>
                     <div style='float:right;' class='container'>
                         <p class="title">Grappy-bot</p>
-                        <p>Bot de música para Discord.</p>
-                        <a class="btn" href="https://github.com/GrappePie/Grappy-bot" target="_blank">Ir al proyecto</a>
+                        <p id='project-desc2'></p>
+                        <a class="btn goToProject" href="https://github.com/GrappePie/Grappy-bot" target="_blank"></a>
                     </div>
-                    <h2 class='yeet' style='color: white !important;'>Este sition es 10x mejor con Javascript activado.</h2>
+                    <h2 class='yeet' style='color: white !important;'></h2>
                 </div>
             </section>
         </div>
