Music and fixes
Music and fixes

--- a/index.html
+++ b/index.html
@@ -82,8 +82,15 @@
                     <h2 class='yeet' style='color: white !important;'></h2>
                 </div>
             </section>
+            <table class="volume">
+                <tr>
+                    <td id="volume_title"></td>
+                    <td><input type="range" class="form-control-range" id="volume"></td>
+                </tr>
+            </table>
         </div>
     </center>
+    <canvas id="particles"></canvas>
     <script src='assets/js/custom.js'></script>
     <script src='assets/js/type.min.js'></script>
 </body>
