--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' />
     <link rel='shortcut icon' href='favicon.png' type='image/x-icon'>
     <link rel='icon' href='favicon.png' type='image/x-icon'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
 <noscript>
@@ -82,13 +83,13 @@
                     <h2 class='yeet' style='color: white !important;'></h2>
                 </div>
             </section>
-            <table class="volume">
-                <tr>
-                    <td id="volume_title"></td>
-                    <td><input type="range" class="form-control-range" id="volume"></td>
-                </tr>
-            </table>
         </div>
+        <table class="volume">
+            <tr>
+                <td id="volume_title"></td>
+                <td><input type="range" class="form-control-range" id="volume"></td>
+            </tr>
+        </table>
     </center>
     <canvas id="particles"></canvas>
     <script src='assets/js/custom.js'></script>
