--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
             <tr>
                 <td>dasd</td>
                 <td id="volume_title"></td>
-                <td><input type="range" class="form-control-range" id="volume" /></td>
+                <td><input type="range" class="form-control-range" value="15" id="volume" /></td>
             </tr>
         </table>
     </center>
